# ChangeLog for app-text/htag
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/htag/ChangeLog,v 1.14 2010/01/03 12:25:13 tove Exp $

*htag-0.0.24 (03 Jan 2010)

  03 Jan 2010; Torsten Veller <tove@gentoo.org> +htag-0.0.24.ebuild:
  Version bump. Move perl module to vendorlib (#299230)

  01 Aug 2009; Jeremy Olexa <darkside@gentoo.org> -htag-0.0.22.ebuild:
  remove old

  24 Aug 2007; <wrobel@gentoo.org> htag-0.0.22.ebuild, htag-0.0.23.ebuild:
  Marked as unstable on amd64.

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  30 May 2005; Stephanie Lockwood-Childs <wormo@gentoo.org>
  htag-0.0.23.ebuild:
  mark ~ppc

  11 Jan 2005; Aaron Walker <ka0ttic@gentoo.org> htag-0.0.23.ebuild:
  Marked stable on x86.

*htag-0.0.23 (04 Dec 2004)

  04 Dec 2004; Aaron Walker <ka0ttic@gentoo.org> +htag-0.0.23.ebuild:
  Version bump.

  21 Oct 2004; Aaron Walker <ka0ttic@gentoo.org> +metadata.xml:
  Add metadata (shell-tools)

  28 Jun 2004; Ciaran McCreesh <ciaranm@gentoo.org> htag-0.0.22.ebuild:
  Added ~sparc, ~mips

*htag-0.0.22 (16 August 2002)

  16 August 2002; Sascha Schwabbauer <cybersystem@gentoo.org> ChangeLog, htag-0.0.22.ebuild, files/digest-htag-0.0.22  

  Initial version in Portage now..
  Initial ebuild by Lim Swee Tat <st_lim@stlim.net>..