@@ -3,14 +3,14 @@ Hash: SHA1
 
 DIST htag-0.0.23.tar.gz 33757 RMD160 34d08d141c82991a105ec6d128f332a41cee7700 SHA1 36afd4f70990c0f756d70e2a231f63a668ceffe4 SHA256 ff0177d649b7357041da77082737b3267bf309fa1aa8b5d7bfb5a3c41439d6fa
 DIST htag-0.0.24.tar.gz 33602 RMD160 931f1f7554713b9db1933f39c49384558924e835 SHA1 0c7c4b3f53596800a27dc7d9bcc306a6ff8a3cd4 SHA256 445ee5732d37755d4fa0b8baf3f3d9a2770288b60e703c7ee169fb96fa772b50
-EBUILD htag-0.0.23.ebuild 886 RMD160 0a9b6b96f131574cd14df4135121e3fb1dcbc649 SHA1 a7c00956f6da2737f472bd3eea87c5428dee0548 SHA256 8f7dbd8364763a590d9e6f9971bf070d93c244cde4558bb29eee57fbc346da4a
-EBUILD htag-0.0.24.ebuild 915 RMD160 686b9cabee1562f7bca6f20ccdf547c0bab952af SHA1 616bd20969394dcfa27161583e6f7bb752bd9497 SHA256 f623ffd31fb8dfd1a803305caebc6f19c8a4fdf7a9e63d34f8753352b8571b1b
-MISC ChangeLog 1384 RMD160 08429773e8ee413c1a86a90a7a01da6070d3dcef SHA1 490b39bd515f6b4d1cbbbf574680b93d245aadf0 SHA256 5dc9712bb4b3455526f137d4f63697efb9bf3f6a72fcf65770967e4d8356ea85
+EBUILD htag-0.0.23.ebuild 928 RMD160 079a6fdba8ecb2b3262c1f3fbc26adb7f088a1ca SHA1 debbe0af969c68a8430c473e47b4ded0bff3aece SHA256 0b789c83a938b44758546f3b8ff06565fa4eddbe255817cd8c90fe0fc8844522
+EBUILD htag-0.0.24.ebuild 929 RMD160 06f943749fdb231c38aab191767d5cf9cb2d698a SHA1 5a53f74483e26388953227bc27d55e050aa53635 SHA256 137afd1e26934386bcafb5f8d23d50efd68f752d4fb43d665a5af2f630aaa804
+MISC ChangeLog 1490 RMD160 b058b09bccb4397c38e1e22289b6f8fd0f44765c SHA1 86721b6ed41ebc3e0fcf2a155951a770b5b4facf SHA256 88132965cfb2dd72f7c0227dd8eddd6127ae8fd5fb146e34f0c80db71cba6792
 MISC metadata.xml 165 RMD160 c4557a3518a065b077539be5a0f20e4735fc2141 SHA1 1831705b1eb97b63968fc9eef31aa904a69a854a SHA256 75ca85c472d4181ae0de529c83826baaebe75d9e750ee6621758b5096bceffcd
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAktAjK8ACgkQV3J2n04EauwFXwCfSXwxd63c2ShpOaoP36McELRH
-LG0An3LVX1A2NueQrCRGaTgcLkqav1Jm
-=7wPE
+iEYEARECAAYFAk0kuLsACgkQgAnW8HDreRZfHgCcDzAlt70zlnIUsOKJjnPAtxss
+xgEAnjWTc9/D6w5ln+D/Zn9sJl5me+Bn
+=U3SJ
 -----END PGP SIGNATURE-----
